--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ font-family: 'Noto Sans', sans-serif;
 <br />
 <br />
 <br />
-<div class="center">From the smallest booth at a trade show to events occupying an entire convention center Tomato Duck is your trusted IT partner to ensure event success. Our team has worked with ESL FACEIT Group, DreamHack, Loadout Entertainment, and others to advise, consult, and make them successful.</div>
+<div class="center">Tomato Duck LLC is a versitile IT service provider. We consult on security, mobile IT solutions, live event IT services, and much more</div>
 <br />
-<div class="center">Shoot us an email at sales@tomatoduck.gg and lets talk about how we can make your live event a success</div>
+<div class="center">Shoot us an email at sales@tomatoduck.gg and lets talk about how we can work together</div>
+<div class="center">If you wish to engage us for an urgent security matter please email security@tomatoduck.gg</div>
