--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ font-family: 'Noto Sans', sans-serif;
 <br />
 <br />
 <br />
-<div class="center">Tomato Duck LLC is a versitile IT service provider. We consult on security, mobile IT solutions, live event IT services, and much more</div>
+<div class="center">Tomato Duck LLC is a versatile IT service provider. We consult on security, mobile IT solutions, live event IT services, and much more</div>
 <br />
 <div class="center">Shoot us an email at sales@tomatoduck.gg and lets talk about how we can work together</div>
 <div class="center">If you wish to engage us for an urgent security matter please email security@tomatoduck.gg</div>
